Made the final design tweaks and made it display correctly on small screens

--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@
     --fw-light: 200;
     --fw-normal: 400;
     --fw-bold: 600;
-
+    
+    --fs-300: 0.875rem;
     --fs-400: 0.9375rem;
     --fs-500: 1.25rem;
     --fs-600: 1.625rem;
@@ -77,27 +78,44 @@
   }
 
   h1, h2, h3 {
-    line-height: 1.1;
-    color: var(--clr-neutral-900)
+    line-height: 1.4;
+    color: var(--clr-neutral-900);
   }
   
+  h1 {
+    font-size: var(--fs-900);
+    color: var(--clr-neutral-400);
+    font-weight: var(--fw-light);
+    
+  }
+
+  header span {
+    color: var(--clr-neutral-900);
+    font-weight: var(--fw-bold);
+  }
+
   .wrapper {
     max-width: 1095px;
     margin-inline: auto;
+    padding-inline: 2rem;
   }
   
   .wrapper--narrow {
     max-width: 550px;
     
   }
-
+  
   header {
     text-align: center;
-    margin-block-start: 6em;
+    margin-block-start: 5em;
     margin-block-end: 5em;
     /*border: 2px solid red;*/
+  }
+  
+  header p {
+    font-size: var(--fs-400);
     
-}
+  }
 
   .header--span {
     /*border: 2px solid blue;*/
@@ -108,8 +126,14 @@
   --gap: 2rem;
   display: flex;
   gap: var(--gap);
-   
+  
+}
 
+@media (max-width: 800px) {
+  .layout-grid{
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .layout-grid > * {                           /*> * == todos os filhos diretos*/
@@ -124,13 +148,24 @@
 }
 
 .card {
-  padding: 30px;
+  padding: 20px 30px;
   width: 350px;
   --br: 0.3rem;
   background-color: #ffffff;
   border-top: var(--br) solid;
   border-radius: var(--br);
   box-shadow: 0 1rem 1rem rgba(93, 99, 180, 0.178);
+}
+.card-title {
+  font-size: var(--fs-500);
+  margin: 0;
+}
+.card > p {
+  font-size: var(--fs-300);
+}
+
+.card-img {  
+  margin-left: auto;
 }
 
 .border-cyan {
@@ -146,10 +181,3 @@
   border-color: var(--clr-blue);
 }
 
-
-
-
-/*--clr-cyan: hsl(180, 62%, 55%);
---clr-red: hsl(0, 78%, 62%);
---clr-blue: hsl(212, 86%, 64%);
---clr-orange: hsl(34, 97%, 64%);
